@@ -1,3 +1,7 @@
+Mon Feb  8 04:57:09 GMT 2010  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (format_display_and_save): Use sigaction, not signal.
+
 Mon Feb  8 04:29:42 GMT 2010  Colin Watson  <cjwatson@debian.org>
 
 	* gnulib: Import getopt-gnu module rather than the obsolete getopt.
